[gd_scene load_steps=10 format=3 uid="uid://dm0q2rxk4vbev"]

[ext_resource type="Script" path="res://Scripts/collection_box.gd" id="1_18chk"]
[ext_resource type="Texture2D" uid="uid://csm5axgy88i58" path="res://Sprites/TileSets/WinAreaSet.png" id="1_fu3q7"]
[ext_resource type="Texture2D" uid="uid://brv2x5rv8o60w" path="res://Sprites/TileSets/WinArea_Set.png" id="3_rs5ih"]
[ext_resource type="Texture2D" uid="uid://c8qnrsc4c051h" path="res://Sprites/UI/VArrowWhiteAnim.tres" id="3_yh68h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7l83"]
size = Vector2(8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ioy"]
atlas = ExtResource("3_rs5ih")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5hup"]
atlas = ExtResource("3_rs5ih")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ya55"]
atlas = ExtResource("3_rs5ih")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mk72j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5hup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ya55")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="CollectionBox" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_18chk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fu3q7")

[node name="ArrowSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_yh68h")
offset = Vector2(0, -12)
flip_v = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PackedVector2Array(8, -8, 12, -8, 12, 7, -12, 7, -12, -8, -8, -8, -8, 3, 8, 3)

[node name="CollectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
shape = SubResource("RectangleShape2D_n7l83")
debug_color = Color(0.486275, 0, 1, 0.419608)

[node name="AreaSprite" type="AnimatedSprite2D" parent="CollectionArea"]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_mk72j")

[node name="WinCollect_SFX" type="AudioStreamPlayer" parent="CollectionArea"]
bus = &"SFX"

[node name="DefCollect_SFX" type="AudioStreamPlayer" parent="CollectionArea"]
bus = &"SFX"

[connection signal="body_entered" from="CollectionArea" to="." method="on_area_entered"]
